main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}



resource "aws_vpc" "demo"{
    cidr_block = " 10.0.0.0/16"
    availability_zone = "us-west-2"
}

resource "aws_subnet" "sub1"{
    vpc_id = aws_vpc.demo.id
    cidr_block = "10.0.1.0/24"
    availability_zone_id = "us-west-2a"
    map_public_ip_on_launch = "true"
}

resource "aws_internet_gateway" "igw"{
    vpc_id = aws_vpc.demo.id
}

resource "aws_route_table" "rt1"{
    vpc_id = aws_vpc.demo.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
}

resource "aws_route_table_association" "a"{
    subnet_id = aws_subnet.sub1.id
    route_table_id = aws_route_table.rt1.id
}

resource "aws_security_group" "sg1"{
  name   = "sg"
  vpc_id = aws_vpc.demo.id


  ingress {
    from_port     = 22
    to_port       = 22
    protocol      = "tcp"
    cidr_blocks   = "[0.0.0.0/0]"
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web"{
    ami = ""
    instance_type = "t2.micro"
    associate_public_ip_address = true
    subnet_id = aws_subnet.sub1.id
    key_name = "test"
    vpc_security_group_ids = [aws_security_group.sg1]
}
